# dummy_sph

./: CMakeLists.txt  Dummy_flow.cpp  Dummy_flow.h  Dummy_flow_drawer.cpp  Dummy_flow_drawer.h  MainWindow.cpp  MainWindow.h  MyQGraphicsView.cpp  Particile.cpp  Particile.h  Read_me.txt  dW_functions.h  myqgraphicsview.h
python/: check_W.txt  mathplot0.txt  mathplot1.txt  mathplot10.txt  mathplot11.txt  mathplot12.txt  mathplot13.txt  mathplot14.txt  mathplot15.txt  mathplot16.txt  mathplot17.txt  mathplot18.txt  mathplot19.txt  mathplot2.txt  mathplot20.txt  mathplot21.txt  mathplot22.txt  mathplot23.txt  mathplot24.txt  mathplot25.txt  mathplot26.txt  mathplot27.txt  mathplot28.txt  mathplot29.txt  mathplot3.txt  mathplot30.txt  mathplot31.txt  mathplot32.txt  mathplot33.txt  mathplot34.txt  mathplot35.txt  mathplot36.txt  mathplot37.txt  mathplot38.txt  mathplot39.txt  mathplot4.txt  mathplot40.txt  mathplot41.txt  mathplot42.txt  mathplot43.txt  (+61 more)
tests/: CMakeLists.txt  test.cpp
